deploy: e8a0dc09084c3a30d854f41993d0c3c6ad3700d2

--- a/syllabus.html
+++ b/syllabus.html
@@ -475,7 +475,7 @@ document.write(`
 </li>
 <li><p>Week 16</p>
 <ul>
-<li><p>5/30: Q&amp;A</p></li>
+<li><p>5/30: NO CLASS</p></li>
 <li><p>6/1: <strong>Project final presentation</strong></p></li>
 </ul>
 </li>
