deploy: ee2c8c1df653db2ece497144293445265ebf6099

--- a/syllabus.html
+++ b/syllabus.html
@@ -405,25 +405,25 @@ document.write(`
 <li><p>Week 4</p>
 <ul>
 <li><p>3/7: ⌨️ FAIRly share your data and code (1)</p></li>
-<li><p>3/9: Path to open academic publishing (1): Open access</p></li>
+<li><p>3/9: Path to open academic publishing (1): Background</p></li>
 </ul>
 </li>
 <li><p>Week 5</p>
 <ul>
 <li><p>3/14: ⌨️ FAIRly share your data and code (2)</p></li>
-<li><p>3/16: Path to open academic publishing (2): Preprints and journal metrics</p></li>
+<li><p>3/16: Path to open academic publishing (2): Open access</p></li>
 </ul>
 </li>
 <li><p>Week 6</p>
 <ul>
 <li><p>3/21: ⌨️ Achieving 100% reproducibility (1)</p></li>
-<li><p>3/23: Reproducibility</p></li>
+<li><p>3/23: Path to open academic publishing (3): Predatory journals and preprints</p></li>
 </ul>
 </li>
 <li><p>Week 7</p>
 <ul>
 <li><p>3/28: ⌨️ Achieving 100% reproducibility (2)</p></li>
-<li><p>3/30: DEI and open science</p></li>
+<li><p>3/30: Reproducing and reusing previous work</p></li>
 </ul>
 </li>
 <li><p>Week 8</p>
@@ -441,13 +441,13 @@ document.write(`
 <li><p>Week 10</p>
 <ul>
 <li><p>4/18: ⌨️ Writing narrative science</p></li>
-<li><p>4/20: Scientific writing</p></li>
+<li><p>4/20: Diversity, Equity, Inclusiveness (DEI)-based open science</p></li>
 </ul>
 </li>
 <li><p>Week 11</p>
 <ul>
 <li><p>4/25: ⌨️ Writing documentation</p></li>
-<li><p>4/27: Scientific data visualization</p></li>
+<li><p>4/27: Scientific writing and data visualization</p></li>
 </ul>
 </li>
 <li><p>Week 12</p>
