deploy: 16fdad77e8d706fecf72ffc571326202f1c033ea

--- a/handson/H4-Narrative.html
+++ b/handson/H4-Narrative.html
@@ -497,9 +497,9 @@ jobs:
 </pre></div>
 </div>
 <p>Commit and push the change above. On the GitHub repository page, go to settings -&gt; Page. Make sure to the settings like this figure shows:</p>
-<p>(a figure pages)</p>
+<p><img alt="Github-scr3" src="../_images/Github-scr3.png" /></p>
 <p>Wait a moment until the yellow dot turns green:</p>
-<p>(a figure green dot)</p>
+<p><img alt="Github-scr4" src="../_images/Github-scr4.png" /></p>
 <p>Now you should be able to see the Notebook published on your GitHub pages!</p>
 </section>
 </section>
