deploy: eaa1a59d17f39b7c525e788f3b0e2544ef21540c

--- a/syllabus.html
+++ b/syllabus.html
@@ -425,7 +425,7 @@ document.write(`
 <li><p>Week 7</p>
 <ul>
 <li><p>3/28: ⌨️ Achieving 100% reproducibility (2)</p></li>
-<li><p>3/30: Reproducing and reusing academic work</p></li>
+<li><p>3/30: Reproducing and reusing academic work (1): Questionable research practices</p></li>
 </ul>
 </li>
 <li><p>Week 8</p>
@@ -443,19 +443,19 @@ document.write(`
 <li><p>Week 10</p>
 <ul>
 <li><p>4/18: ⌨️ Writing narrative science (1)</p></li>
-<li><p>4/20: Communicating science (1): Scientific writing</p></li>
+<li><p>4/20: Reproducing and reusing academic work (2): Code sharing</p></li>
 </ul>
 </li>
 <li><p>Week 11</p>
 <ul>
 <li><p>4/25: ⌨️ Writing narrative science (2)</p></li>
-<li><p>4/27: Communicating science (2): Data visualization, local community and indigenous people</p></li>
+<li><p>4/27: Communicating science (1): Scientific writing, Data visualization, local community and indigenous people</p></li>
 </ul>
 </li>
 <li><p>Week 12</p>
 <ul>
 <li><p>5/2: ⌨️ Data visualization (1)</p></li>
-<li><p>5/4: Communicating science (3): community collaboration, outreach, and civil science</p></li>
+<li><p>5/4: Communicating science (2): community collaboration, outreach, and civil science</p></li>
 </ul>
 </li>
 <li><p>Week 13</p>
