deploy: 2b9e3972ed4cca89cb86d95204a67b0d023b7593

--- a/syllabus.html
+++ b/syllabus.html
@@ -451,31 +451,31 @@ document.write(`
 <li><p>Week 11</p>
 <ul>
 <li><p>4/25: ⌨️ Writing narrative science (2)</p></li>
-<li><p>4/27: Communicating science (1): Scientific writing, Data visualization, local community and indigenous people</p></li>
+<li><p>4/27: Communicating science (1): Scientific writing</p></li>
 </ul>
 </li>
 <li><p>Week 12</p>
 <ul>
-<li><p>5/2: ⌨️ Explorative data visualization (1)</p></li>
-<li><p>5/4: Communicating science (2): community collaboration, outreach, and civil science</p></li>
+<li><p>5/2: ⌨️ Writing narrative science (3)</p></li>
+<li><p>5/4: Communicating science (2): Data visualization</p></li>
 </ul>
 </li>
 <li><p>Week 13</p>
 <ul>
-<li><p>5/9: ⌨️ Explorative data visualization (2)</p></li>
-<li><p>5/11: Open data sets in remote sensing, Earth &amp; environmental sciences (1)</p></li>
+<li><p>5/9: ⌨️ Explorative data visualization</p></li>
+<li><p>5/11: Communicating science (3): Community and collaboration</p></li>
 </ul>
 </li>
 <li><p>Week 14</p>
 <ul>
 <li><p>5/16: ⌨️ Getting and analyzing open data in remote sensing (1)</p></li>
-<li><p>5/18: Open data sets in remote sensing, Earth &amp; environmental sciences (2)</p></li>
+<li><p>5/18: Open data sets in remote sensing, Earth &amp; environmental sciences (1)</p></li>
 </ul>
 </li>
 <li><p>Week 15</p>
 <ul>
 <li><p>5/23: ⌨️ Getting and analyzing open data in remote sensing (2)</p></li>
-<li><p>5/25: Financial support and career plans</p></li>
+<li><p>5/25: Open data sets in remote sensing, Earth &amp; environmental sciences (2) + Career plans</p></li>
 </ul>
 </li>
 <li><p>Week 16</p>
