--- a/syllabus.html
+++ b/syllabus.html
@@ -478,7 +478,7 @@ document.write(`
 </li>
 <li><p>Week 11</p>
 <ul>
-<li><p>11/19: ⌨️ Explorative data visualization (1)</p></li>
+<li><p>11/19: <em>NO CLASS</em> (ACRS) TBD: ⌨️ Explorative data visualization (1)</p></li>
 <li><p>11/21: <em>NO CLASS</em></p></li>
 </ul>
 </li>
@@ -503,13 +503,13 @@ document.write(`
 <li><p>Week 15</p>
 <ul>
 <li><p>12/17: ⌨️ Getting and analyzing remotely sensed open data (1)</p></li>
-<li><p>12/19: Open data sets in remote sensing, Earth &amp; environmental sciences (2): Infrastructure</p></li>
+<li><p>12/19: <em>NO CLASS</em></p></li>
 </ul>
 </li>
 <li><p>Week 16</p>
 <ul>
 <li><p>12/24: ⌨️ Getting and analyzing remotely sensed open data (2)</p></li>
-<li><p>12/26: <strong>Term project: final presentation</strong></p></li>
+<li><p>12/26: <strong>Term project: final presentation</strong>, Open data sets in remote sensing, Earth &amp; environmental sciences (2): Infrastructure</p></li>
 </ul>
 </li>
 <li><p>Week 17</p>
