--- a/syllabus.html
+++ b/syllabus.html
@@ -400,13 +400,13 @@
 <li><p>Week 1</p>
 <ul>
 <li><p>9/10: Checking in &amp; course introduction</p></li>
-<li><p>9/12: What is open science?</p></li>
+<li><p>9/12: What is open science? (1)</p></li>
 </ul>
 </li>
 <li><p>Week 2</p>
 <ul>
 <li><p>9/17: <em>NO CLASS</em> (Mid-Autumn)</p></li>
-<li><p>9/19: Open data and beyond (1): Background</p></li>
+<li><p>9/19: What is open science? (2)</p></li>
 </ul>
 </li>
 <li><p>Week 3</p>
@@ -430,31 +430,31 @@
 <li><p>Week 6</p>
 <ul>
 <li><p>10/15: ⌨️ FAIRly share your data and code (2)</p></li>
-<li><p>10/17: Open data and beyond (2): Licenses &amp; The FAIR policy</p></li>
+<li><p>10/17: Open data and beyond (1): Background</p></li>
 </ul>
 </li>
 <li><p>Week 7</p>
 <ul>
 <li><p>10/22: ⌨️ Achieving 100% reproducibility (1)</p></li>
-<li><p>10/24: Path to open academic publishing (1): Background and the emergence of Open Access</p></li>
+<li><p>10/24: Open data and beyond (2): Licenses &amp; The FAIR policy</p></li>
 </ul>
 </li>
 <li><p>Week 8</p>
 <ul>
 <li><p>10/29: ⌨️ Achieving 100% reproducibility (2)</p></li>
-<li><p>10/31: Path to open academic publishing (2): Predatory journals and preprints</p></li>
+<li><p>10/31: <em>NO CLASS</em> (Kong-rey)</p></li>
 </ul>
 </li>
 <li><p>Week 9</p>
 <ul>
 <li><p>11/5: <strong>Term project: progress write-up due</strong>; ⌨️ Writing narrative science (1)</p></li>
-<li><p>11/7: <strong>Term project: progress presentation</strong>; Reproducing and reusing academic work (1): Questionable research practices</p></li>
+<li><p>11/7: <strong>Term project: progress presentation</strong>; Path to open academic publishing (1): Background and the emergence of Open Access</p></li>
 </ul>
 </li>
 <li><p>Week 10</p>
 <ul>
 <li><p>11/12: ⌨️ Writing narrative science (2)</p></li>
-<li><p>11/14: Reproducing and reusing academic work (2): Code sharing</p></li>
+<li><p>11/14: Path to open academic publishing (2): Predatory journals and preprints</p></li>
 </ul>
 </li>
 <li><p>Week 11</p>
@@ -466,13 +466,13 @@
 <li><p>Week 12</p>
 <ul>
 <li><p>11/26: ⌨️ Explorative data visualization (1)</p></li>
-<li><p>11/28: Communicating science (1): Scientific writing and data visualization</p></li>
+<li><p>11/28: Reproducing and reusing academic work (1): Questionable research practices</p></li>
 </ul>
 </li>
 <li><p>Week 13</p>
 <ul>
 <li><p>12/3: ⌨️ Explorative data visualization (2)  <em>(NCU RUN?)</em></p></li>
-<li><p>12/5: Communicating science (2): Community and collaboration</p></li>
+<li><p>12/5: Reproducing and reusing academic work (2): Code sharing</p></li>
 </ul>
 </li>
 <li><p>Week 14</p>
@@ -490,13 +490,13 @@
 <li><p>Week 16</p>
 <ul>
 <li><p>12/24: ⌨️ Getting and analyzing remotely sensed open data (2)</p></li>
-<li><p>12/26: <strong>Term project: final presentation</strong>, Open data sets in remote sensing, Earth &amp; environmental sciences (1): Data structure</p></li>
+<li><p>12/26: <strong>Term project: final presentation</strong>, Communicating science (1+2): Scientific writing and data visualization + Community and collaboration</p></li>
 </ul>
 </li>
 <li><p>Week 17</p>
 <ul>
 <li><p>12/31: Wrap-up: the future of open science</p></li>
-<li><p>1/2: Open data sets in remote sensing, Earth &amp; environmental sciences (2): Infrastructure; <strong>Term project: final write-up due</strong></p></li>
+<li><p>1/2: Open data sets in remote sensing, Earth &amp; environmental sciences (1+2): Data structure + Infrastructure; <strong>Term project: final write-up due</strong></p></li>
 </ul>
 </li>
 <li><p>Week 18</p>
