deploy: c16674532c9a5fb35d7b8e93a5c2f32b047dab7e

--- a/syllabus.html
+++ b/syllabus.html
@@ -435,25 +435,25 @@
 </li>
 <li><p>Week 7</p>
 <ul>
-<li><p>10/22: ⌨️ Achieving 100% reproducibility (1)</p></li>
+<li><p>10/22: ⌨️ FAIRly share your data and code (3)</p></li>
 <li><p>10/24: Open data and beyond (2): Licenses &amp; The FAIR policy</p></li>
 </ul>
 </li>
 <li><p>Week 8</p>
 <ul>
-<li><p>10/29: ⌨️ Achieving 100% reproducibility (2)</p></li>
+<li><p>10/29: ⌨️ Achieving 100% reproducibility (1)</p></li>
 <li><p>10/31: <em>NO CLASS</em> (Kong-rey)</p></li>
 </ul>
 </li>
 <li><p>Week 9</p>
 <ul>
-<li><p>11/5: <strong>Term project: progress write-up due</strong>; ⌨️ Writing narrative science (1)</p></li>
+<li><p>11/5: <strong>Term project: progress write-up due</strong>; ⌨️ Achieving 100% reproducibility (2)</p></li>
 <li><p>11/7: <strong>Term project: progress presentation</strong>; Path to open academic publishing (1): Background and the emergence of Open Access</p></li>
 </ul>
 </li>
 <li><p>Week 10</p>
 <ul>
-<li><p>11/12: ⌨️ Writing narrative science (2)</p></li>
+<li><p>11/12: ⌨️ Achieving 100% reproducibility (3)</p></li>
 <li><p>11/14: Path to open academic publishing (2): Predatory journals and preprints</p></li>
 </ul>
 </li>
@@ -465,14 +465,14 @@
 </li>
 <li><p>Week 12</p>
 <ul>
-<li><p>11/26: ⌨️ Explorative data visualization (1)</p></li>
-<li><p>11/28: Reproducing and reusing academic work (1): Questionable research practices</p></li>
+<li><p>11/26: ⌨️ Writing narrative science (1)</p></li>
+<li><p>11/28: <em>Review of the progress report</em></p></li>
 </ul>
 </li>
 <li><p>Week 13</p>
 <ul>
-<li><p>12/3: ⌨️ Explorative data visualization (2)  <em>(NCU RUN?)</em></p></li>
-<li><p>12/5: Reproducing and reusing academic work (2): Code sharing</p></li>
+<li><p>12/3: ⌨️ Writing narrative science (2)</p></li>
+<li><p>12/5: Reproducing and reusing academic work (1+2): Questionable research practices + Code sharing</p></li>
 </ul>
 </li>
 <li><p>Week 14</p>
@@ -483,25 +483,25 @@
 </li>
 <li><p>Week 15</p>
 <ul>
-<li><p>12/17: ⌨️ Getting and analyzing remotely sensed open data (1)</p></li>
+<li><p>12/17: ⌨️ Writing narrative science (3)</p></li>
 <li><p>12/19: <em>NO CLASS</em> (CSRSR field trip)</p></li>
 </ul>
 </li>
 <li><p>Week 16</p>
 <ul>
-<li><p>12/24: ⌨️ Getting and analyzing remotely sensed open data (2)</p></li>
+<li><p>12/24: ⌨️ Explorative data visualization</p></li>
 <li><p>12/26: <strong>Term project: final presentation</strong>, Communicating science (1+2): Scientific writing and data visualization + Community and collaboration</p></li>
 </ul>
 </li>
 <li><p>Week 17</p>
 <ul>
-<li><p>12/31: Wrap-up: the future of open science</p></li>
+<li><p>12/31: ⌨️ Getting and analyzing remotely sensed open data</p></li>
 <li><p>1/2: Open data sets in remote sensing, Earth &amp; environmental sciences (1+2): Data structure + Infrastructure; <strong>Term project: final write-up due</strong></p></li>
 </ul>
 </li>
 <li><p>Week 18</p>
 <ul>
-<li><p>1/7: <em>NO CLASS</em> (Reserved)</p></li>
+<li><p>1/7: <em>NO CLASS</em> (Reserved)  Wrap-up: the future of open science?</p></li>
 <li><p>1/9: <em>NO CLASS</em> (Reserved)</p></li>
 </ul>
 </li>
