deploy: a655de3530be0b266fe8b0dd49128a932ab308aa

--- a/syllabus.html
+++ b/syllabus.html
@@ -475,32 +475,32 @@ document.write(`
 </li>
 <li><p>Week 11</p>
 <ul>
-<li><p>11/11: Reproducing and reusing academic work (1)</p></li>
-<li><p>11/13: 🛠️ Explorative data visualization (1)</p></li>
+<li><p>11/11: <font color='red'><em>NO CLASS</em> (Typhoon)</font></p></li>
+<li><p>11/13: <em>NO CLASS</em> (CSRSR field trip)</p></li>
 </ul>
 </li>
 <li><p>Week 12</p>
 <ul>
-<li><p>11/18: Reproducing and reusing academic work (2)</p></li>
-<li><p>11/20: 🛠️ Explorative data visualization (2)</p></li>
+<li><p>11/18: Reproducing and reusing academic work</p></li>
+<li><p>11/20: 🛠️ Explorative data visualization (1)</p></li>
 </ul>
 </li>
 <li><p>Week 13</p>
 <ul>
 <li><p>11/25: Open data sets in remote sensing, Earth &amp; environmental sciences</p></li>
-<li><p>11/27: 🛠️ Getting and analyzing remotely sensed open data (1)</p></li>
+<li><p>11/27: 🛠️ Explorative data visualization (2)</p></li>
 </ul>
 </li>
 <li><p>Week 14</p>
 <ul>
 <li><p>12/2: The future of open science?</p></li>
-<li><p>12/4: 🛠️ Getting and analyzing remotely sensed open data (2)</p></li>
+<li><p>12/4: 🛠️ Getting and analyzing remotely sensed open data (1)</p></li>
 </ul>
 </li>
 <li><p>Week 15</p>
 <ul>
 <li><p>12/9: <strong>Term project: final presentation</strong></p></li>
-<li><p>12/11: <em>Reserved for CSRSR field trip</em></p></li>
+<li><p>12/11: 🛠️ Getting and analyzing remotely sensed open data (2)</p></li>
 </ul>
 </li>
 <li><p>Week 16</p>
